# forkbot

./: .gitignore  README.md
spybot-foxglove-extension/: .gitignore  CHANGELOG.md  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json
spybot-foxglove-extension/src/: ManualEngagePanel.tsx  index.ts
src/drive/: drive.ino
src/spybot_control/: package.xml  setup.cfg  setup.py
src/spybot_control/config/: drive_bridge.yaml
src/spybot_control/launch/: drive_bridge.launch.py
src/spybot_control/scripts/: t2_drive_bench.sh
src/spybot_control/spybot_control/: drive_bridge.py
src/spybot_perception/: package.xml  setup.cfg  setup.py
src/spybot_perception/launch/: outlet_detector.launch.py
src/spybot_perception/scripts/: probe_camera.py  probe_live.py  smoke_test.sh
src/spybot_perception/spybot_perception/: detection_overlay.py  outlet_detector.py  usb_camera_capture.py  usb_camera_publisher.py
